feat: tests & config added
